prefix pinned orgs for userid, fix collapsed pad

--- a/console/src/app/pages/orgs/org-grid/org-grid.component.scss
+++ b/console/src/app/pages/orgs/org-grid/org-grid.component.scss
@@ -161,6 +161,7 @@ h1 {
             color: #8795a1;
 
             &:hover {
+                opacity: 1;
                 color: white;
             }
 
